fix(webapp): Webapp data functionnal with component

--- a/webapp/src/app.css
+++ b/webapp/src/app.css
@@ -3,3 +3,11 @@
 @import 'tailwindcss/utilities';
 
 @import '@flaticon/flaticon-uicons/css/all/all';
+
+.scroll-hidden::-webkit-scrollbar {
+    display: none;
+}
+.scroll-hidden {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
